--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <div id="bd-gt">
             <div class="img-bdGt">
-                <img src="/images/gt.jpg" alt="Chuyen vien chup anh" class="imgbd-gt">
+                <img src="https://github.com/amanokida/ProfileDuyAnh/blob/master/images/gt.jpg?raw=true" alt="Chuyen vien chup anh" class="imgbd-gt">
             </div>
             <div class="wrapperbd-gt">
                 <h1 class="bd-gtTitle">Lời Giới Thiệu </h1>
@@ -60,12 +60,12 @@
         <div id="bd-sanpham">
             <h1 class="bd-sanphamtext">Sản Phẩm</h1>
             <div class="imgcontent">
-                <div class="imgchung"><img src="/images/IPX01790.jpg" alt="" class="imgBd-sanpham" style="width: 400px;"></div>
-                <div class="imgchung"><img src="/images/IPX01964.jpg" alt="" class="imgBd-sanpham" style="width: 400px;"></div>
-                <div class="imgchung"><img src="/images/IPX02157.jpg" alt="" class="imgBd-sanpham" style="width: 400px;"></div>
-                <div class="imgchung"><img src="/images/IPX02166.jpg" alt="" class="imgBd-sanpham" style="width: 400px;"></div>
-                <div class="imgchung"><img src="/images/IPX02360.jpg" alt="" class="imgBd-sanpham" style="width: 400px;"></div>
-                <div class="imgchung"><img src="/images/IPX02386.jpg" alt="" class="imgBd-sanpham" style="width: 400px;"></div>
+                <div class="imgchung"><img src="https://github.com/amanokida/ProfileDuyAnh/blob/master/images/IPX01790.jpg?raw=true" alt="" class="imgBd-sanpham" style="width: 400px;"></div>
+                <div class="imgchung"><img src="https://github.com/amanokida/ProfileDuyAnh/blob/master/images/IPX01964.jpg?raw=true" alt="" class="imgBd-sanpham" style="width: 400px;"></div>
+                <div class="imgchung"><img src="https://github.com/amanokida/ProfileDuyAnh/blob/master/images/IPX02157.jpg?raw=true" alt="" class="imgBd-sanpham" style="width: 400px;"></div>
+                <div class="imgchung"><img src="https://github.com/amanokida/ProfileDuyAnh/blob/master/images/IPX02166.jpg?raw=true" alt="" class="imgBd-sanpham" style="width: 400px;"></div>
+                <div class="imgchung"><img src="https://github.com/amanokida/ProfileDuyAnh/blob/master/images/IPX02360.jpg?raw=true" alt="" class="imgBd-sanpham" style="width: 400px;"></div>
+                <div class="imgchung"><img src="https://github.com/amanokida/ProfileDuyAnh/blob/master/images/IPX02386.jpg?raw=true" alt="" class="imgBd-sanpham" style="width: 400px;"></div>
             </div>
         </div>
     </div>
