--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DuyAnh-Photo</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="https://github.com/amanokida/ProfileDuyAnh/blob/master/images/gt.jpg?raw=true" type="png">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 </head>
@@ -36,12 +38,10 @@
                 <h3 class="content-bdh-h3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita libero ullam ipsum beatae, explicabo ducimus deleniti, aperiam sequi voluptatem perferendis consectetur in ut. Quae quis nesciunt quisquam praesentium, quidem omnis.
                 </h3>
             </div>
-            
             <a href="#bd-gt" class="next-homea">
                 <i class='bx bx-down-arrow-alt'></i>
                 <p>Read More</p>
             </a>
-            
         </div>
         <div id="bd-gt">
             <div class="img-bdGt">
@@ -73,7 +73,23 @@
         <h1 class="logoFooterH1">Hoang Duy Anh</h1>
     </div>
     <div id="footer">
-
+        <div class="linkapp">
+            <a href="https://www.facebook.com/dungBui1989" target="_blank" class="linkicon">
+                <i class='bx bxl-facebook-circle'></i>
+                <p class="text_linkapp">Hoàng Duy Anh</p>
+            </a>
+            <span class="gmail">
+                <i class='bx bxl-gmail' ></i>
+                <span class="text_gmail">duyanh123@gmail.com</span>
+            </span>
+            <span class="phone">
+                <i class='bx bx-phone' ></i>
+                <span class="text_phone">0987654321</span>
+            </span>
+        </div>
+        <div class="linkmap">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6909.454399878249!2d105.9072324301!3d20.73814883362305!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135b791ee0dbbd3%3A0x35f762c23831e38d!2zUGjDuiB4dXnDqm4!5e0!3m2!1svi!2s!4v1731244248322!5m2!1svi!2s" width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
     </div>
 </body>
 </html>
